# at32f4xx-pac

./: .gitignore  Cargo.toml  flake.nix  generate.ps1  generate.sh
patches/: at32a403a.yaml  at32f402.yaml  at32f403.yaml  at32f403a.yaml  at32f405.yaml  at32f407.yaml  at32f413.yaml  at32f415.yaml  at32f421.yaml  at32f423.yaml  at32f425.yaml  at32f435.yaml  at32f437.yaml  at32wb415.yaml
patches/common/: a403a.yaml  comms.yaml  (+10 more)
reference_manual/: Analog-to-digital_converter_ADC_registers.md  CAN_registers.md  CRC_calculation_unit_CRC_registers.md  Clock_and_reset_manage_CRM_registers.md  DMA_controller_DMA_registers.md  Debug_DEBUG_registers.md  Digital-to-analog_converter_DAC_registers.md  Digital_Video_parallel_interface_DVP_registers.md  EDMA_controller_EDMA_registers.md  Enhanced_real-time_clock_ERTC_registers.md  Ethernet_media_access_control_EMAC_registers.md  External_interrupt_Event_controller_EXINT_registers.md  External_memory_controller_XMC_registers.md  Flash_memory_controller_FLASH_registers.md  GPIOs_and_IOMUX_registers.md  HICK_auto_clock_calibration_ACC_registers.md  I2C_interface_registers.md  Power_control_PWC_registers.md  Qud-SPI_interface_QSPI_registers.md  SDIO_interface_registers.md  Serial_peripheral_interface_SPI_registers.md  System_configuration_controller_SCFG_registers.md  Timer_registers.md  Universal_serial_bus_full-seed_device_interface_OTGFS_registers.md  Universal_synchronous_asynchronous_receiver_transmitter_USART_registers.md  Watchdog_timer_WDT_registers.md  Window_watchdog_timer_WWDT_registers.md
reference_manual_f435_f437/: ACC.md  ADC.md  CAN.md  CRC.md  DAC.md  DEBUG.md  EDMA.md  EXINT.md  FLASH.md  GPIO.md  I2C.md  OTGFS.md  SCFG.md  SDIO.md  USART.md
(+733 files in other folders)
