[package]
edition = "2021"
name = "at32f4xx-pac"
version = "0.5.0"
authors = ["Nikita Koss <kossnikita@gmail.com>"]
description = "Device support crates for AT32F4 devices"
repository = "https://github.com/kossnikita/at32f4xx-pac"
readme = "README.md"
keywords = ["at32", "svd2rust", "no_std", "embedded", "artery"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
exclude = [
    "patches/**",
    "generate.*",
    "html/**",
    "svd/**",
    ".vscode/**",
    "PACKs/**",
]

[package.metadata.docs.rs]
all-features = true
default-target = "thumbv7em-none-eabi"
targets = []

[lib]
path = "src/lib.rs"

[workspace]
exclude = [
    ".gen-tmp/at32a403a",
    ".gen-tmp/at32f402",
    ".gen-tmp/at32f403",
    ".gen-tmp/at32f403a",
    ".gen-tmp/at32f405",
    ".gen-tmp/at32f407",
    ".gen-tmp/at32f413",
    ".gen-tmp/at32f415",
    ".gen-tmp/at32f421",
    ".gen-tmp/at32f423",
    ".gen-tmp/at32f425",
    ".gen-tmp/at32f435",
    ".gen-tmp/at32f437",
    ".gen-tmp/at32wb415",
]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }
critical-section = { version = "1", optional = true }
vcell = "0.1"
portable-atomic = { version = "1", default-features = false, optional = true }
defmt = {version = "1.0.1", optional = true}

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
defmt = ["dep:defmt"]
at32a403a = []
at32f402 = []
at32f403 = []
at32f403a = []
at32f405 = []
at32f407 = []
at32f413 = []
at32f415 = []
at32f421 = []
at32f423 = []
at32f425 = []
at32f435 = []
at32f437 = []
at32wb415 = []
